--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     }
   },
   "routes": [
-    { "src": "/static/(.*)", "dest": "/api/static/$1" },
+    { "src": "/static/(.*)", "dest": "/static/$1" },
     { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
