--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/index.py": {
+      "runtime": "python3.11"
     }
-  ],
+  },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.py"
-    }
+    { "src": "/static/(.*)", "dest": "/api/static/$1" },
+    { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
