--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "functions": {
     "api/index.py": {
-      "runtime": "python3.11"
+      "runtime": "@vercel/python@3.11"
     }
   },
   "routes": [
-    { "src": "/static/(.*)", "dest": "/api/static/$1" },
+    { "src": "/static/(.*)", "dest": "/static/$1" },
     { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
