--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-  "functions": {
-    "api/index.py": {
-      "runtime": "@vercel/python@3.11"
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "/api/index.py" }
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.py"
+    }
   ]
 }
